@@ -96,9 +96,7 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.0.0-M3</version>
           <configuration>
-            <argLine>
-              --illegal-access=permit
-            </argLine>
+            <argLine>@{argLine} -Xverify:none --illegal-access=permit </argLine>
           </configuration>
         </plugin>
 
@@ -107,8 +105,41 @@
           <artifactId>spring-boot-maven-plugin</artifactId>
           <version>2.1.2.RELEASE</version>
         </plugin>
+
+        <plugin>
+          <groupId>org.jacoco</groupId>
+          <artifactId>jacoco-maven-plugin</artifactId>
+          <version>0.8.2</version>
+        </plugin>
+
       </plugins>
     </pluginManagement>
+
+    <!-- forced plugin execution-->
+    <plugins>
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+
+	<executions>
+          <execution>
+            <goals>
+              <goal>prepare-agent</goal>
+            </goals>
+          </execution>
+
+          <!-- attached to Maven test phase -->
+          <execution>
+            <id>report</id>
+            <phase>test</phase>
+            <goals>
+              <goal>report</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+
   </build>
 
 </project>
